# Selenium-LAP

./: .gitignore  README.md  notebook_test.ipynb  pyproject.toml  requirements.txt  teste.py
page_objects/: page_objects.py
pages/: anotacoes  elements.py  pages.py
pages/page_elements/: fatura.py  funcionario.py  guardiao.py  login.py  repactuacao.py  spg.py  type.py
scripts/: inicializar.py  preencher.py  preencher_fatura.py  preencher_repactuacao.py
tests/: test_login.py
