[tool.poetry]
name = "selenium-lap"
version = "0.1.0"
description = ""
authors = ["Rodrigo Meneses <rodrigo.menesesufc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
selenium = "^4.1.0"
pandas = "^1.3.5"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
