[tool.poetry]
name = "selenium-lap"
version = "0.1.0"
description = ""
authors = ["Rodrigo Meneses <rodrigo.menesesufc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
selenium = "^4.1.0"
pandas = "^1.3.5"
jupyter = "^1.0.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | venv
)/
'''
